--- a/sick-fits/frontend/.vscode/settings.json
+++ b/sick-fits/frontend/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "workbench.colorCustomizations": {
-    "titleBar.activeForeground": "#000",
-    "titleBar.inactiveForeground": "#000000CC",
+    "titleBar.activeForeground": "#FFC600",
+    "titleBar.inactiveForeground": "#FFC600",
     "titleBar.activeBackground": "#FFC600",
     "titleBar.inactiveBackground": "#FFC600CC"
   }
